Settings UI: prevent jump due to dimension change ocurred by inner elements

--- a/_inc/client/components/tags-input/style.scss
+++ b/_inc/client/components/tags-input/style.scss
@@ -1,6 +1,7 @@
 .react-tagsinput {
 	border: 1px solid #e9eff3;
 	padding: rem( 5px );
+	height: rem( 30px );
 }
 
 .react-tagsinput--focused {
